@@ -39,6 +39,7 @@
 - updated: `Array.random()` algorithm (+70% faster than older)
 - updated: `RESTBuilder.file(name, filetarget, [filename])` can contain `filename` instead of buffer
 - updated: `U.streamer(beg, [end], onItem(item, index), [skip], [stream])` added a new argument `stream` for flushing buffer
+- updated: `ErrorBuilder.addTransform(name, callback(isResponse))` by adding new argument `isresponse`
 
 - fixed: (IMPORTANT) long messages in WebSocket
 - fixed: (IMPORTANT) `controller` param in schemas
